# nogo-analyzer

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  buildbuddy.yaml  def.bzl  deps.bzl  go.work
.github/: BUILD.bazel  FUNDING.yml
examples/staticcheck/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  go_deps.bzl  staticcheck.bzl
examples/staticcheck/cmd/failed/: BUILD.bazel  main.go
examples/staticcheck/cmd/pass/: BUILD.bazel  main.go
examples/staticcheck/tests/: staticcheck_test.go
goci-lint/: BUILD.bazel  README.md
goci-lint/errcheck/: BUILD.bazel  analyzer.go  deps.bzl  go.mod  go.sum
goci-lint/gofmt/: BUILD.bazel  analyzer.go  deps.bzl  go.mod  go.sum
goci-lint/goimports/: BUILD.bazel  analyzer.go  deps.bzl  go.mod  go.sum
goci-lint/ineffassign/: BUILD.bazel  deps.bzl  go.mod  go.sum
goci-lint/prealloc/: BUILD.bazel  analyzer.go  deps.bzl  go.mod  go.sum
goci-lint/tests/: BUILD.bazel  errcheck_test.go  go.mod  go.sum  goci_lint_test.go  gofmt_test.go  goimports_test.go  ineffassign_test.go  prealloc_test.go  util.go
golangci-lint/: BUILD.bazel  README.md  analyzer.go  analyzer_test.go  def.bzl  deps.bzl  go.mod  go.sum
golangci-lint/cmd/: BUILD.bazel
golangci-lint/cmd/extract-func/: BUILD.bazel  main.go
golangci-lint/cmd/list-analyzer/: BUILD.bazel  main.go
golangci-lint/constructor/: BUILD.bazel  constructor.go  placeholder.go
golangci-lint/patch/: 001_export_source.patch  002_export_getter.patch  BUILD.bazel
golangci-lint/tests/: BUILD.bazel  golangci_lint_test.go
golangci-lint/util/: BUILD.bazel  util.go
private/: BUILD.bazel  def.bzl  deps.bzl  deps_test.bzl  gen_deps.bzl  go.mod  go.sum
private/cmd/: BUILD.bazel
private/cmd/buildprune/: BUILD.bazel  main.go
private/cmd/deps-prune/: BUILD.bazel  main.go
staticcheck/: BUILD.bazel  README.md  analyzer.go  analyzer_test.go  def.bzl  deps.bzl  go.mod  go.sum  sample_config_json.txt
staticcheck/cmd/: BUILD.bazel
staticcheck/cmd/gen_config/: BUILD.bazel  main.go
staticcheck/cmd/list_analyzers/: BUILD.bazel  main.go
staticcheck/tests/: BUILD.bazel  staticcheck_test.go
staticcheck/util/: BUILD.bazel  directive.go  directive_test.go  util.go
tool/: BUILD.bazel  goworksync.sh
tools/: BUILD.bazel  goworksync.sh  prune-deps.sh
