load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        ".bazelrc",
        ".gitignore",
        ".user.bazelrc",
        "BUILD.bazel",
        "README.md",
        "WORKSPACE",
        "bazel-bin",
        "bazel-nogo-analyzer",
        "bazel-out",
        "bazel-testlogs",
        "go.work",
        "go.work.sum",
        "//goci-lint:all_files",
        "//golangci-lint:all_files",
        "//private:all_files",
        "//staticcheck:all_files",
        "//tools:all_files",
    ],
    visibility = ["//visibility:public"],
)

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["@bazel_gazelle//internal/language/test_filegroup"],
)

# gazelle:prefix github.com/sluongng/nogo-analyzer
# gazelle:exclude staticcheck/tests
# gazelle:exclude goci-lint/tests
# gazelle:exclude golangci-lint/tests
gazelle(
    name = "gazelle",
    gazelle = "gazelle_binary",
)

# Note: this introduces wrong load statement in staticcheck/deps.bzl
# TODO: fix this so that running it does not cause problem.
gazelle(
    name = "update-staticcheck-deps",
    args = [
        "-from_file=staticcheck/go.mod",
        "-to_macro=staticcheck/deps.bzl%staticcheck_deps",
        "-prune",
    ],
    command = "update-repos",
    gazelle = "gazelle_binary",
)

# Note: this introduces wrong load statement in staticcheck/deps.bzl
# TODO: fix this so that running it does not cause problem.
gazelle(
    name = "update-golangci-lint-deps",
    args = [
        "-from_file=golangci-lint/go.mod",
        "-to_macro=golangci-lint/deps.bzl%_golangci_lint_deps",
        "-build_external=external",
        "-prune",
    ],
    command = "update-repos",
    gazelle = "gazelle_binary",
)

alias(
    name = "goworksync",
    actual = "//tools:goworksync",
)

buildifier(
    name = "buildifier",
)
