load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        ".bazelrc",
        ".gitignore",
        ".user.bazelrc",
        "BUILD.bazel",
        "README.md",
        "WORKSPACE",
        "bazel-bin",
        "bazel-nogo-analyzer",
        "bazel-out",
        "bazel-testlogs",
        "go.work",
        "go.work.sum",
        "//goci-lint:all_files",
        "//golangci-lint:all_files",
        "//private:all_files",
        "//staticcheck:all_files",
        "//third-party:all_files",
        "//tools:all_files",
    ],
    visibility = ["//visibility:public"],
)

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["@bazel_gazelle//internal/language/test_filegroup"],
)

# gazelle:prefix github.com/sluongng/nogo-analyzer
gazelle(
    name = "gazelle",
    gazelle = "gazelle_binary",
)

gazelle(
    name = "update-deps",
    args = [
        "-from_file=go.work",
        "-to_macro=private/deps.bzl%nogo_analyzer_deps",
        "-build_external=external",
        "-prune",
    ],
    command = "update-repos",
    gazelle = "gazelle_binary",
)

alias(
    name = "goworksync",
    actual = "//tools:goworksync",
)

buildifier(
    name = "buildifier",
)
