filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "README.md",
        "//goci-lint/errcheck:all_files",
        "//goci-lint/gofmt:all_files",
        "//goci-lint/goimports:all_files",
        "//goci-lint/ineffassign:all_files",
        "//goci-lint/tests:all_files",
    ],
    visibility = ["//visibility:public"],
)
