filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "def.bzl",
        "deps.bzl",
        "deps_test.bzl",
        "gen_deps.bzl",
        "go.mod",
        "go.sum",
        "//private/cmd:all_files",
    ],
    visibility = ["//visibility:public"],
)
