load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//private:gen_deps.bzl", "generate_deps")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

go_library(
    name = "errcheck",
    srcs = ["analyzer.go"],
    importpath = "github.com/sluongng/nogo-analyzer/goci-lint/errcheck",
    visibility = ["//visibility:public"],
    deps = ["@com_github_kisielk_errcheck//errcheck:go_default_library"],
)

generate_deps(
    name = "errcheck",
    mod_file = ":go.mod",
    sum_file = ":go.sum",
)
