load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//private:gen_deps.bzl", "generate_deps")

go_library(
    name = "errcheck",
    srcs = ["analyzer.go"],
    importpath = "github.com/sluongng/nogo-analyzer/goci-lint/errcheck",
    visibility = ["//visibility:public"],
    deps = ["@com_github_kisielk_errcheck//errcheck"],
)

generate_deps(
    name = "errcheck_deps",
    mod_file = ":go.mod",
    sum_file = ":go.sum",
    targets = ["//goci-lint/errcheck"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "analyzer.go",
        "deps.bzl",
        "go.mod",
        "go.sum",
    ],
    visibility = ["//visibility:public"],
)
