load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//private:gen_deps.bzl", "generate_deps")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

go_library(
    name = "gofmt",
    srcs = ["analyzer.go"],
    importpath = "github.com/sluongng/nogo-analyzer/goci-lint/gofmt",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golangci_gofmt//gofmt:go_default_library",
        "@org_golang_x_tools//go/analysis",
    ],
)

generate_deps(
    name = "gofmt",
    mod_file = ":go.mod",
    sum_file = ":go.sum",
)
