load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//private:gen_deps.bzl", "generate_deps")

go_library(
    name = "gofmt",
    srcs = ["analyzer.go"],
    importpath = "github.com/sluongng/nogo-analyzer/goci-lint/gofmt",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golangci_gofmt//gofmt:go_default_library",
        "@org_golang_x_tools//go/analysis",
    ],
)

generate_deps(
    name = "gofmt_deps",
    mod_file = ":go.mod",
    sum_file = ":go.sum",
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "analyzer.go",
        "go.mod",
        "go.sum",
    ],
    visibility = ["//visibility:public"],
)
