load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//private:gen_deps.bzl", "generate_deps")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

go_library(
    name = "ineffassign",
    srcs = ["analyzer.go"],
    importpath = "github.com/sluongng/nogo-analyzer/goci-lint/ineffassign",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gordonklaus_ineffassign//pkg/ineffassign:go_default_library"],
)

generate_deps(
    name = "ineffassign",
    mod_file = ":go.mod",
    sum_file = ":go.sum",
)
