load("@io_bazel_rules_go//go/tools/bazel_testing:def.bzl", "go_bazel_test")

# gazelle:lang test_filegroup

[
    go_bazel_test(
        name = i,
        size = "medium",
        srcs = [i + "_test.go"],
        rule_files = [
            "@com_github_sluongng_nogo_analyzer//:all_files",
            "@io_bazel_rules_go//:all_files",
            "@bazel_gazelle//:all_files",
        ],
    )
    for i in [
        "errcheck",
        "gofmt",
        "goimports",
        "ineffassign",
        "prealloc",
    ]
]

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "errcheck_test.go",
        "go.mod",
        "go.sum",
        "gofmt_test.go",
        "goimports_test.go",
        "ineffassign_test.go",
        "prealloc_test.go",
    ],
    visibility = ["//visibility:public"],
)
