load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@io_bazel_rules_go//go/tools/bazel_testing:def.bzl", "go_bazel_test")

go_bazel_test(
    name = "tests",
    size = "medium",
    srcs = ["golangci_lint_test.go"],
    rule_files = [
        "@com_github_sluongng_nogo_analyzer//:all_files",
        "@io_bazel_rules_go//:all_files",
        "@bazel_gazelle//:all_files",
    ],
    tags = ["manual"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "golangci_lint_test.go",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "tests_test",
    srcs = ["golangci_lint_test.go"],
    deps = ["@io_bazel_rules_go//go/tools/bazel_testing:go_default_library"],
)
