load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

go_library(
    name = "util",
    srcs = ["util.go"],
    importpath = "github.com/sluongng/nogo-analyzer/staticcheck/util",
    visibility = ["//visibility:public"],
    deps = [
        "@co_honnef_go_tools//analysis/lint",
        "@co_honnef_go_tools//quickfix",
        "@co_honnef_go_tools//simple",
        "@co_honnef_go_tools//staticcheck",
        "@co_honnef_go_tools//stylecheck",
        "@org_golang_x_tools//go/analysis",
    ],
)
