load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:lang test_filegroup,go

go_library(
    name = "util",
    srcs = [
        "directive.go",
        "util.go",
    ],
    importpath = "github.com/sluongng/nogo-analyzer/staticcheck/util",
    visibility = ["//visibility:public"],
    deps = [
        "@co_honnef_go_tools//analysis/lint",
        "@co_honnef_go_tools//quickfix",
        "@co_honnef_go_tools//simple",
        "@co_honnef_go_tools//staticcheck",
        "@co_honnef_go_tools//stylecheck",
        "@co_honnef_go_tools//unused",
        "@org_golang_x_tools//go/analysis",
    ],
)

go_test(
    name = "util_test",
    size = "small",
    srcs = ["directive_test.go"],
    embed = [":util"],
    deps = ["@co_honnef_go_tools//analysis/lint"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "directive.go",
        "directive_test.go",
        "util.go",
    ],
    visibility = ["//visibility:public"],
)
