load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "list-analyzer_lib",
    srcs = ["main.go"],
    importpath = "github.com/sluongng/nogo-analyzer/golangci-lint/cmd/list-analyzer",
    visibility = ["//visibility:private"],
    deps = ["//golangci-lint/util"],
)

go_binary(
    name = "list-analyzer",
    embed = [":list-analyzer_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "main.go",
    ],
    visibility = ["//visibility:public"],
)
