load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "buildprune_lib",
    srcs = ["main.go"],
    importpath = "github.com/sluongng/nogo-analyzer/private/cmd/buildprune",
    visibility = ["//visibility:private"],
    deps = ["@com_github_bazelbuild_buildtools//build:go_default_library"],
)

go_binary(
    name = "buildprune",
    embed = [":buildprune_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
)
