load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pass_lib",
    srcs = ["main.go"],
    importpath = "github.com/sluongng/nogo-analyzer/examples/staticcheck/cmd/pass",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "pass",
    embed = [":pass_lib"],
    visibility = ["//visibility:public"],
)
